Q4-Ingress-Echo-With-Controller/02-echoserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echoserver-service
  namespace: echo-sound
spec:
  selector:
    app: echoserver
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
